Fix task-list ul overflow

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@ body {
   box-shadow: 5px 10px 8px rgba(202, 67, 29, 0.492);
 }
 
+#todo-list {
+  max-height: 80%;
+}
+
 #hero {
   background: none;
   box-shadow: none;
@@ -139,6 +143,7 @@ i[class^="fa"] {
   width: 100%;
   overflow: hidden;
   overflow-y: scroll;
+  max-height: 350px;
 }
 
 .task {
